Change constant sets to immutable